--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -61,3 +61,24 @@ h2 {
       @apply bg-background text-foreground;
     }
   }
+
+  .avatar-edit-hover::before {
+    content: 'Edit';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    color: white; /* Text color */
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    cursor: pointer;
+  }
+  
+  .avatar-edit-hover:hover::before {
+    opacity: 1;
+  }
