massive changes to the app layout, added a drawer and a sheet component, added a useMediaQuery hook, added a session context, added a new mobile menu, added a new single note component, renamed the navigation component to DesktopMenu, added a user header component, and made changes to the task and user profile components

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -95,6 +95,11 @@ table th button:hover {
 
 .note {
   position: relative;
+  /* color: #a0a0a0; */
+}
+
+.note > div:nth-child(2) {
+  opacity: .8;
 }
 
 .note div {
@@ -102,7 +107,7 @@ table th button:hover {
   /* z-index: 2; */
 }
 
-.note::after {
+.note:not(:last-child)::after {
   content: "";
   position: absolute;
   display: block;
